fix: устранены фаталы JNI и зависание корутины при ошибке отправки
- List.of заменён на Arrays.asList: java.util.List.of есть только с API 30,
  minSdk проектов 24, на старых устройствах конструктор падал с NoSuchMethodError
- все результаты JNI в инициализации проверяются: NULL jmethodID или висящее
  исключение ронял процесс на следующем JNI-вызове; Lua-модуль регистрируется
  до Java-части, поэтому недоступное расширение даёт понятную ошибку в Lua
- висящие исключения снимаются через CheckJavaException, в том числе на фоновом
  потоке в CopyJavaString (OOM в GetStringUTFChars)
- аргументы запроса проверяются до CallVoidMethod
- lua_tostring больше не вызывается по ключу внутри lua_next: числовой ключ
  конвертировался на месте и ломал обход таблицы
- исключение из HttpRequest (например, битый url) отдаёт в Lua результат с
  error и status 0, как обычный сетевой сбой, вместо вечного coroutine.yield

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>